--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="text_main">#FFFFFF</color>
     <color name="text_sub">#ABABAB</color>
+    <color name="border_weak">#262626</color>
 </resources>
