--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,6 @@
 
     <color name="text_main">#222222</color>
     <color name="text_sub">#717171</color>
+    <color name="color_primary">#FF018786</color>
+    <color name="border_weak">#EAECEF</color>
 </resources>
