--- a/app/src/main/res/layout/item_task.xml
+++ b/app/src/main/res/layout/item_task.xml
@@ -110,12 +110,13 @@
             android:id="@+id/v_progress"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:indeterminate="true"
             android:visibility="gone"
             app:indicatorColor="@color/color_primary"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/iv_download"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@id/tv_extension"
             app:trackCornerRadius="3dp"
             app:trackThickness="3dp" />
@@ -123,10 +124,19 @@
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_download"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="5dp"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
             android:src="@drawable/ic_vector_download"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/iv_complete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:src="@drawable/ic_vector_complete"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
