--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="text_sub">#717171</color>
     <color name="color_primary">#FF018786</color>
     <color name="border_weak">#EAECEF</color>
+    <color name="red_main">#E52233</color>
 </resources>
