Some update about ui and database.

--- a/app/src/main/res/layout/fragment_download.xml
+++ b/app/src/main/res/layout/fragment_download.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="@string/app_name"
+        android:text="@string/tab_download"
         android:textColor="@color/text_main"
         android:textSize="30sp"
         android:textStyle="bold"
