--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,4 +4,5 @@
     <color name="text_sub">#ABABAB</color>
     <color name="border_weak">#262626</color>
     <color name="red_main">#E55C5C</color>
+    <color name="bg_dialog">#2C2D30</color>
 </resources>
