--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="color_primary">#FF018786</color>
     <color name="border_weak">#EAECEF</color>
     <color name="red_main">#E52233</color>
+    <color name="bg_dialog">#FFFFFF</color>
 </resources>
