--- a/app/src/main/res/drawable/shape_bg_task.xml
+++ b/app/src/main/res/drawable/shape_bg_task.xml
@@ -2,9 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="8dp" />
-    <solid android:color="@color/white" />
+    <solid android:color="@color/bg_window" />
     <stroke
         android:width="0.5dp"
-        android:color="@color/text_sub" />
+        android:color="@color/stroke_color" />
 
 </shape>
