--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,18 +11,17 @@
         android:id="@+id/v_viewpager2"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/v_tablayout"
+        app:layout_constraintBottom_toTopOf="@id/v_tab_layout"
         app:layout_constraintTop_toTopOf="parent" />
 
     <View
-        android:id="@+id/v_line"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
-        android:background="@color/border_weak"
-        app:layout_constraintBottom_toTopOf="@id/v_tablayout" />
+        android:background="@color/divide_line"
+        app:layout_constraintBottom_toTopOf="@id/v_tab_layout" />
 
     <com.google.android.material.tabs.TabLayout
-        android:id="@+id/v_tablayout"
+        android:id="@+id/v_tab_layout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@null"
