--- a/app/src/main/res/layout/item_task_detect.xml
+++ b/app/src/main/res/layout/item_task_detect.xml
@@ -111,15 +111,33 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="20dp"
             android:indeterminate="true"
             android:visibility="gone"
             app:indicatorColor="@color/color_primary"
+            app:indicatorTrackGapSize="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/tv_extension"
             app:trackCornerRadius="3dp"
-            app:trackThickness="3dp" />
+            app:trackStopIndicatorSize="0dp"
+            app:trackThickness="3dp"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/tv_speed"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:gravity="center"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@id/v_progress"
+            app:layout_constraintEnd_toEndOf="@id/v_progress"
+            tools:text="100kb/s"
+            tools:visibility="visible" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_download"
@@ -128,7 +146,8 @@
             android:padding="10dp"
             android:src="@drawable/ic_vector_download"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:visibility="gone" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/iv_complete"
