--- a/app/src/main/res/layout/item_task_detect.xml
+++ b/app/src/main/res/layout/item_task_detect.xml
@@ -44,17 +44,31 @@
         tools:text="why are you this cute and pretty#kazuha #lesserafim credits to 4K 4732 channel" />
 
     <TextView
-        android:id="@+id/tv_author"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_uploader"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:ellipsize="end"
         android:lines="1"
         android:textColor="@color/text_sub"
         android:textSize="11sp"
+        app:layout_constraintEnd_toStartOf="@id/tv_date"
         app:layout_constraintStart_toStartOf="@id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
-        tools:text="author" />
+        tools:text="uploader" />
+
+    <TextView
+        android:id="@+id/tv_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:ellipsize="end"
+        android:lines="1"
+        android:textColor="@color/text_sub"
+        android:textSize="11sp"
+        app:layout_constraintEnd_toEndOf="@id/tv_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
+        tools:text="2025.6.6" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/v_format"
@@ -63,8 +77,9 @@
         android:layout_margin="10dp"
         android:background="@drawable/shape_bg_task_format"
         app:layout_constraintBottom_toTopOf="@id/v_failed"
-        app:layout_constraintTop_toBottomOf="@id/tv_author"
-        app:layout_goneMarginBottom="10dp">
+        app:layout_constraintTop_toBottomOf="@id/tv_date"
+        app:layout_goneMarginBottom="10dp"
+        app:layout_goneMarginTop="20dp">
 
         <TextView
             android:id="@+id/tv_format"
